# termide

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md  flake.nix  install.sh
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app-event/src/: lib.rs
crates/app/src/: layout_session.rs  panel_ext.rs  state.rs
crates/buffer/src/: buffer.rs  history.rs  lib.rs  search.rs
crates/clipboard/src/: lib.rs
crates/config/src/: bookmarks.rs  keybindings.rs  lib.rs  scripts.rs  settings.rs
crates/core/src/: action.rs  command.rs  event.rs  panel.rs
crates/db/src/: lib.rs
crates/file-ops/src/: lib.rs  manager.rs  queue.rs  types.rs  worker.rs
crates/git/src/: blame.rs  commits.rs  diff.rs  lib.rs  stash.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  protocol.rs  server.rs
crates/panel-diagnostics/: Cargo.toml
crates/panel-editor/: Cargo.toml
crates/panel-git-log/: Cargo.toml
crates/panel-git-status/: Cargo.toml
crates/panel-image/: Cargo.toml
crates/system-monitor/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui-render/: Cargo.toml
doc/en/: README.md  architecture.md  editor.md  file-manager.md  installation.md  terminal.md  themes.md  ui.md  vfs.md
doc/ru/: README.md  architecture.md  editor.md  file-manager.md  installation.md  terminal.md  themes.md  ui.md  vfs.md
doc/zh/: README.md  architecture.md  editor.md  file-manager.md  themes.md  ui.md  vfs.md
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/homebrew/: termide.rb
src/: main.rs  ui.rs
(+152 files in other folders)
