[package]
name = "termide-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol integration for termide"

[dependencies]
anyhow.workspace = true
log.workspace = true
termide-logger = { path = "../logger" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lsp-types = "0.97"
url = "2"
